dc_grammar.tt
grammar Downcase

  rule text
    ( directive / quoted / comment / unquoted )* <Text>
  end

  rule comment
    '!' [^\n]* <Delete>
  end

  rule directive
    sms
  end

  rule quoted
    ( '"' [^"]* '"' / "'" [^']* "'" )+ <Verbatim>
  end

  rule sms
    '!' [sS] [mM] [sS] '$' <Downcase>
  end

  rule unquoted
    [^'"!]+ <Downcase>
  end

end
